feat: Add DocuSeal integration with document submission and template management
- Implemented a new HTML interface for DocuSeal integration, allowing users to create document submissions, manage templates, and monitor submissions.
- Created a client library (docuseal-client.js) to interact with Firebase Functions for submission and template management.
- Added functionality for creating submissions from existing templates or HTML content, including signer management and email notifications.
- Implemented template creation from HTML and PDF uploads, with support for form fields.
- Integrated a form builder for customizing document templates and a monitoring system for submission status.

--- a/nav.html
+++ b/nav.html
@@ -26,6 +26,7 @@
         <a href="clip_path_editor.html">Clip Path Editor</a>
         <a href="cubic_bezier.html">Cubic Bezier</a>
         <a href="base64.html">Base64 image encoder - decoder</a>
+        <a href="docuseal-signin.html">DocuSeal</a>
       </div>
     </div>
 
@@ -52,6 +53,7 @@
         <a href="clip_path_editor.html">Clip Path Editor</a>
         <a href="cubic_bezier.html">Cubic Bezier</a>
         <a href="base64.html">Base64 image encoder - decoder</a>
+        <a href="docuseal-signin.html">DocuSeal</a>
       </div>
     </div>
 
