--- a/public/test.html
+++ b/public/test.html
@@ -33,6 +33,8 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=false"></script>
+    <!-- Firebase Configuration -->
+    <script src="config/firebase-config.js"></script>
     <script src="./scripts/script.js" type="module"></script>
   </head>
   <body>
@@ -45,18 +47,15 @@
 
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      const firebaseConfig = {
-        apiKey: "AIzaSyC2CwIcLmGi46-VeVBgGuzgjl1rAN_S3IY",
-        authDomain: "red-box-software.firebaseapp.com",
-        projectId: "red-box-software",
-        storageBucket: "red-box-software.appspot.com",
-        messagingSenderId: "94993930256",
-        appId: "1:94993930256:web:b47f330bee30bddffb1295",
-        measurementId: "G-2LX6NFYS1J",
-      };
+      // Use configuration from external file
+      if (!window.firebaseConfig) {
+        console.error(
+          "Firebase configuration not loaded! Make sure config/firebase-config.js is included."
+        );
+      }
 
       // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
+      const app = initializeApp(window.firebaseConfig);
       const analytics = getAnalytics(app);
     </script>
     <script>
