--- a/public/docuseal-signin.html
+++ b/public/docuseal-signin.html
@@ -343,6 +343,17 @@
           <li>Access completed documents securely</li>
         </ul>
       </div>
+
+      <!-- Development Environment Notice -->
+      <div
+        id="devNotice"
+        style="display: none"
+        class="message info"
+        style="margin-top: 20px"
+      >
+        <strong>Development Mode:</strong> Google Sign-In may not work on
+        localhost. Use email/password sign-in for local testing.
+      </div>
     </div>
 
     <!-- Firebase Configuration -->
@@ -382,6 +393,16 @@
       const auth = getAuth(app);
       const db = getFirestore(app);
       const googleProvider = new GoogleAuthProvider();
+
+      // Check if we're in development environment
+      const isDevelopment =
+        location.hostname === "localhost" ||
+        location.hostname === "127.0.0.1" ||
+        location.hostname === "";
+
+      if (isDevelopment) {
+        document.getElementById("devNotice").style.display = "block";
+      }
 
       // Helper function to check user access
       async function checkUserAccess(user) {
@@ -547,9 +568,25 @@
             }
           } catch (error) {
             console.error("Google sign in error:", error);
-            if (error.code !== "auth/popup-closed-by-user") {
-              showMessage("Google sign in failed. Please try again.", "error");
+            let errorMessage = "Google sign in failed. Please try again.";
+
+            // Handle specific Firebase Auth errors
+            if (error.code === "auth/popup-closed-by-user") {
+              // User closed the popup, don't show error
+              return;
+            } else if (
+              error.code === "auth/unauthorized-domain" ||
+              error.message.includes("requests-from-referer") ||
+              error.message.includes("are-blocked")
+            ) {
+              errorMessage =
+                "Local development domain not authorized. Please use email/password sign in or contact support to configure the development environment.";
+            } else if (error.code === "auth/popup-blocked") {
+              errorMessage =
+                "Popup was blocked by your browser. Please allow popups for this site or use email/password sign in.";
             }
+
+            showMessage(errorMessage, "error");
           } finally {
             googleBtn.disabled = false;
             hideLoading();
